# mpl-richtext

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: basic_usage.py  real_example.py
mpl_richtext/: __init__.py  core.py  shaping.py  utils.py  version.py
tests/: test_styles_api.py
