[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl-richtext"
dynamic = ["version"]
description = "Rich text rendering for Matplotlib with multi-color and multi-style support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rabin Katel", email = "kattelrabinraja13@gmail.com"}
]
keywords = [
    "matplotlib",
    "text",
    "color",
    "rich-text",
    "multi-color",
    "visualization",
    "plotting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5.0",
    "uharfbuzz>=0.30.0",
    "fonttools>=4.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/ra8in/mpl-richtext"
Documentation = "https://github.com/ra8in/mpl-richtext#readme"
Repository = "https://github.com/ra8in/mpl-richtext"
"Bug Tracker" = "https://github.com/ra8in/mpl-richtext/issues"

[tool.setuptools.dynamic]
version = {attr = "mpl_richtext.version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true